output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_664.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_664.py", line 111
    /* pos[0]==4 */ durations[4] if pos[0]==4 else durations[5]))))
    ^
SyntaxError: invalid syntax
